# fastapi_restapi_microservise

./: README.md  pyproject.toml
api/: main.py
db_app/: db.py  models.py  schemas.py
